--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+
 :root {
     --terminal-bg: rgb(4, 98, 52, 0.6);
     --icon-size: 1.5vmin;
@@ -7,7 +9,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Zen Dots", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
@@ -59,6 +63,8 @@ body {
 
 .command {
     color: rgb(0, 160, 0);
+    margin-bottom: 0.4rem;
+    min-height: 1.2rem;
 }
 
 #cursor {
@@ -72,13 +78,15 @@ body {
 }
 
 @keyframes blink {
-    0%{
+    0% {
         opacity: 1;
     }
-    60%{
+
+    60% {
         opacity: 0.7;
     }
-    100%{
+
+    100% {
         opacity: 0;
     }
 }
