--- a/style.css
+++ b/style.css
@@ -26,8 +26,6 @@ body {
 #terminal {
     width: 40vw;
     height: 40vh;
-    min-height: 20rem;
-    min-width: 30rem;
     border: var(--terminal-border-flow) solid var(--terminal-bg);
     border-radius: 10px;
     overflow: hidden;
@@ -109,5 +107,18 @@ body {
 
     100% {
         opacity: 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #terminal {
+        width: 90%;
+        height: 90vh;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    #terminal {
+        width: 90%;
     }
 }
