--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 1.6rem);
+    margin: 0.8rem 0;
 }
 
 #terminal {
     width: 40vw;
-    height: 40vh;
     border: var(--terminal-border-flow) solid var(--terminal-bg);
     border-radius: 10px;
     overflow: hidden;
@@ -50,7 +50,7 @@ body {
 }
 
 #terminal-content {
-    height: 100%;
+    height: 40vh;
     color: white;
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(var(--terminal-border-flow));
@@ -61,6 +61,7 @@ body {
     gap: 0.6rem;
     padding-left: 2rem;
     position: relative;
+    overflow: auto;
 }
 
 .command {
@@ -113,7 +114,9 @@ body {
 @media only screen and (max-width: 500px) {
     #terminal {
         width: 90%;
-        height: 90vh;
+    }
+    #terminal-content{
+        height: 70vh;
     }
 }
 
